--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= restaurant.restaurant_name %></td>
         <td><%= restaurant.address %></td>
-        <td><%= restaurant.neighborhood_id %></td>
+        <td><%= restaurant.neighborhood.neighborhood_name %></td>
         <td>
           <a href="/restaurants/<%= restaurant.id %>" class="btn btn-primary">Show</a>
           <a href="/restaurants/<%= restaurant.id %>/edit" class="btn btn-warning">Edit</a>
