--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -28,7 +28,13 @@
       <tr>
         <td><%= restaurant.restaurant_name %></td>
         <td><%= restaurant.address %></td>
-        <td><%= restaurant.neighborhood.neighborhood_name %></td>
+        <td>
+          <% if restaurant.neighborhood.present? %>
+            <a href="/neighborhoods/<%= restaurant.neighborhood.id %>">
+              <%= restaurant.neighborhood.neighborhood_name %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/restaurants/<%= restaurant.id %>" class="btn btn-primary">Show</a>
           <a href="/restaurants/<%= restaurant.id %>/edit" class="btn btn-warning">Edit</a>
