--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -45,7 +45,7 @@
       <% @dish.bookmarks.each do |bookmark| %>
         <li class="list-group-item">
           <a href="/bookmarks/<%= bookmark.id %>">
-            <%= bookmark.user_id %>
+            <%= bookmark.restaurant_id %>
           </a>
           <div class="btn-group btn-group-xs pull-right">
             <a href="/bookmarks/<%= bookmark.id %>" class="btn btn-primary">
